Scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body::-webkit-scrollbar {
   width: 2px;
 }
 
+
 /* body::-webkit-scrollbar-track {
   background-color: #e3e3e3;
 
@@ -18,6 +19,19 @@ body::-webkit-scrollbar-thumb {
   background-color: black;
   border-radius: 20px;
 } */
+
+div::-webkit-scrollbar {
+  width: 3px;
+}
+
+div::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+div::-webkit-scrollbar-thumb {
+  background-color: green;
+
+}
 
 /* Custom Scroll Bar End */
 
